# netcalc

./: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pubspec.yml
.github/ISSUE_TEMPLATE/: code-of-conduct-report.md
.github/workflows/: build-and-release.yml
Doc/: Netcalc-Documentation.md
v0.1.0/: CMakeLists.txt  main.cpp
v0.1.1/: CMakeLists.txt  main.cpp
v0.2.0/: CMakeLists.txt  main.cpp
v0.3.0/: CMakeLists.txt  main.cpp
